--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>table layout</title>
+    <title> Home </title>
 </head>
 <body>
 <table border="1" width="1000" align="center">
@@ -13,15 +13,37 @@
         <td colspan="2"></td>
     </tr>
     <tr>
-        <td height="50" colspan="3"></td>
+        <td height="50" colspan="2" align="center">
+            <a href="index.html"> Home </a> ||
+            <a href="about.html"> About </a> ||
+            <a href="contact.html"> Contact </a>
+        </td>
     </tr>
     <tr>
         <td height="600"></td>
-        <td></td>
-        <td width="200"></td>
+        <td valign="top">
+            <h1> Web Development with Laravel </h1>
+
+            <p align="justify"> <strong>Laravel is a free, modern, dynamic and powerful open source</strong> <ins>PHP web application framework, designed</ins> <em> development of </em>model-view-controller (MVC) web applications. Remarkable features of Laravel include</p>
+            <p align="center"> <mark>Laravel is a free, modern,</mark> dynamic and powerful open source PHP web application framework, designed for the development of model-view-controller (MVC) web applications. Remarkable features of Laravel include</p>
+            <p>(a+b)<sup>2</sup> = a<sup>2</sup> + 2ab + b<sup>2</sup></p>
+            <p>H<sub>2</sub>SO<sub>4</sub></p>
+
+            <pre>
+                some contend goes here
+                some contend goes here
+                      some contend goes here
+                      some contend goes here
+                 some contend goes here
+                 some contend goes here
+                      some contend goes here
+                      some contend goes here
+             </pre>
+            <a href="http://bitm.org.bd" target="_blank"> BITM </a>
+        </td>
     </tr>
     <tr>
-        <td height="50" colspan="3"></td>
+        <td height="50" colspan="2"></td>
     </tr>
 </table>
 </body>
